--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.15.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
     "react-router": "^5.0.0",
     "react-scripts": "2.1.8",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "classnames": "^2.2.5",
+    "prop-types": "^15.6.1",
+    "reselect": "^3.0.1",
+    "todomvc-app-css": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
